<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">The Contest</string>
    <string name="action_settings">Settings</string>
    <string name="team_a_title">Team A</string>
    <string name="team_a_score">0</string>
    <string name="team_a_score_button">+1</string>
    <string name="team_b_title">Team B</string>
    <string name="team_b_score">0</string>
    <string name="team_b_score_button">+1</string>
    <string name="reset_score_button">Reset Scores</string>
    <string name="team_a_win">Team A Wins!</string>
    <string name="team_b_win">Team B Wins!</string>
    <string name="ok">OK</string>
    <string name="settings">Setting</string>
    <string name="select_language">Language</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="save">Save</string>
    <string name="return_main">Return</string>
</resources>