<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:textSize="18sp"/>

    <RadioGroup
        android:id="@+id/language_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/language_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/language_spanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spanish"/>
    </RadioGroup>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="saveLanguage"/>

    <Button
        android:id="@+id/return_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_main"
        android:onClick="openMain"/>

</LinearLayout>
